k8s/flexcars-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flexcars-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flexcars-backend
  template:
    metadata:
      labels:
        app: flexcars-backend
    spec:
      containers:
        - name: flexcars-backend
          image: 715221148096.dkr.ecr.eu-west-3.amazonaws.com/flexcars-backend:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: backend-ecr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: flexcars-backend-service
spec:
  type: LoadBalancer
  selector:
    app: flexcars-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
