k8s/flexcars-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flexcars-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flexcars-frontend
  template:
    metadata:
      labels:
        app: flexcars-frontend
    spec:
      containers:
        - name: flexcars-frontend
          image: 715221148096.dkr.ecr.eu-west-3.amazonaws.com/flexcars-frontend:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: frontend-ecr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: flexcars-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: flexcars-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
